--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tyson Battistella</title>
+    <meta name="Description" content="A web developer and machine learning enthusiast currently residing on the south end of a small island on the west side of a large country in the north.">
+    <meta name="Keywords" content="Tyson Battistella, Picmoji, Telmediq, SDAML ">
   </head>
   <body>
     <noscript>
